// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Field  Matches snapshot for not_required_multiple_has_button_text 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="not_required_multiple_has_button_text"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for not_required_multiple_no_button_text 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="not_required_multiple_no_button_text"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for not_required_single 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="not_required_single"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for required_multiple_has_button_text 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="required_multiple_has_button_text"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for required_multiple_no_button_text 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="required_multiple_no_button_text"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for required_single 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="required_single"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;

exports[`File Field  Matches snapshot for required_single_allow_png 1`] = `
<div
  aria-disabled={false}
  className="cf2-file form-control"
  id="required_single"
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDragStart={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "borderColor": "rgb(102, 102, 102)",
      "borderRadius": "5px",
      "borderStyle": "dashed",
      "borderWidth": "2px",
      "height": "200px",
      "margin": "0 auto",
      "position": "relative",
      "width": "200px",
    }
  }
>
  <p>
    false
  </p>
  <input
    autoComplete="off"
    disabled={false}
    multiple="false"
    onChange={[Function]}
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0.00001,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    type="file"
  />
</div>
`;
